# Customer_Segmentation_Model

./: .gitattributes  .gitignore  DEPLOY.md  LICENSE  METHODOLOGY.md  Makefile  PUBLISHING.md  README.md  START_HERE.txt  build_dashboard_data.py  check_before_push.sh  dashboard_template.html  predict_samples.py  pyproject.toml  requirements.txt  run_pipeline.py  stage_a_segment.py  stage_b_predict.py
docs/: index.html
outputs/: cluster_profile.csv  dashboard_data.json  k_sweep.csv  metrics.json  sample_predictions.csv  sample_predictions.json  segment_summary.csv
src/: campaign.py  classify.py  cluster.py  config.py  data.py  predict.py  preprocess.py
tests/: test_pipeline.py
